
# ===================================================================
# インクルードパスの設定
# ===================================================================


# ===================================================================
# サブディレクトリの設定
# ===================================================================


# ===================================================================
#  ソースファイルの設定
# ===================================================================



# ===================================================================
#  テスト用のターゲットの設定
# ===================================================================

add_executable ( read_aag
  read_aag.cc
  $<TARGET_OBJECTS:ym_aig_obj_d>
  )

add_executable ( read_aig
  read_aig.cc
  $<TARGET_OBJECTS:ym_aig_obj_d>
  )


# ===================================================================
#  インストールターゲットの設定
# ===================================================================
